--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
 		<meta content="Bayu Gusti Paraya" name="keywords" />
 		<link href="assets/img/favicon.png" rel="icon" />
 		<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+			rel="stylesheet"
+		/>
 		<link href="assets/ven/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/ven/icofont/icofont.min.css" rel="stylesheet">
-		<link href="assets/ven/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet"/>
+		<link href="assets/ven/icofont/icofont.min.css" rel="stylesheet" />
+		<link
+			href="assets/ven/owl.carousel/assets/owl.carousel.min.css"
+			rel="stylesheet"
+		/>
 		<!-- for popup image on project --->
 		<link href="assets/ven/venobox/venobox.min.css" rel="stylesheet" />
 		<link href="assets/ven/font-awesome/css/all.min.css" rel="stylesheet" />
-    <link href="assets/ven/boxicons/css/boxicons.min.css" rel="stylesheet">
+		<link href="assets/ven/boxicons/css/boxicons.min.css" rel="stylesheet" />
 		<link href="assets/css/style.css" rel="stylesheet" />
 	</head>
 
@@ -25,10 +31,12 @@
 			<div class="container">
 				<h1><a href="index.html">Bayu Gusti Paraya</a></h1>
 				<h2 class="intro-subtitle">
-          <span class="text-slider-items">Laravel Developer, Student at Padang State Polytechnic, Junior Web Developer, UI/UX Designer, Programmer</span>
-          <strong class="text-slider"></strong>
+					<span class="text-slider-items"
+						>Laravel Developer, Student at Padang State Polytechnic, Junior Web
+						Developer, UI/UX Designer, Programmer</span
+					>
+					<strong class="text-slider"></strong>
 				</h2>
-
 
 				<nav class="nav-menu d-none d-lg-block">
 					<ul>
@@ -37,14 +45,23 @@
 						<li><a href="#resume">Resume</a></li>
 						<li><a href="#portfolio">Portfolio</a></li>
 						<li><a href="#contact">Contact</a></li>
+						<li><a href="/list-api-indonesia">API Indonesia</a></li>
 					</ul>
 				</nav>
 
 				<div class="social-links">
-					<a href="https://github.com/bayugustiparaya" target="_blank"><i class="fab fa-github"></i></a>
-					<a href="https://www.instagram.com/bye_guss/" target="_blank"><i class="fab fa-instagram"></i></a>
-					<a href="https://www.linkedin.com/in/bayugustiparaya/" target="_blank"><i class="fab fa-linkedin"></i></a>
-					<a href="https://bayugustiparaya.blogspot.com/" target="_blank"><i class="fab fa-blogger-b"></i></a>
+					<a href="https://github.com/bayugustiparaya" target="_blank"
+						><i class="fab fa-github"></i
+					></a>
+					<a href="https://www.instagram.com/bye_guss/" target="_blank"
+						><i class="fab fa-instagram"></i
+					></a>
+					<a href="https://www.linkedin.com/in/bayugustiparaya/" target="_blank"
+						><i class="fab fa-linkedin"></i
+					></a>
+					<a href="https://bayugustiparaya.blogspot.com/" target="_blank"
+						><i class="fab fa-blogger-b"></i
+					></a>
 				</div>
 			</div>
 		</header>
@@ -66,17 +83,41 @@
 					<div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 						<h3>Junior Web Developer</h3>
 						<p class="font-italic">
-							Hello! I am Bayu Gusti Paraya a junior web developer. I am studying Software Engineering at <a href="https://pnp.ac.id" target="_blank">Padang State Polytechnic</a>. <br />I am very interested and passionate about programming be it backend, frontend, mobile and especially on the backend of a web. And I am able to work  individually as well as with team.
-            </p>
+							Hello! I am Bayu Gusti Paraya a junior web developer. I am
+							studying Software Engineering at
+							<a href="https://pnp.ac.id" target="_blank"
+								>Padang State Polytechnic</a
+							>. <br />I am very interested and passionate about programming be
+							it backend, frontend, mobile and especially on the backend of a
+							web. And I am able to work individually as well as with team.
+						</p>
 						<div class="row">
 							<div class="col-lg-12">
 								<ul>
-									<li><i class="icofont-rounded-right"></i><strong>Birthday:</strong> 7 August 2000</li>
-									<li><i class="icofont-rounded-right"></i><strong>Phone:</strong> +62 812 7107 7073</li>
-									<li><i class="icofont-rounded-right"></i><strong>City:</strong> Lima Puluh Kota, Sumbar. ID</li>
-									<li><i class="icofont-rounded-right"></i><strong>Degree : </strong> Bachelor of Applied Science</li>
-									<li><i class="icofont-rounded-right"></i><strong>Email:</strong> bayu.gustip7820@gmail.com</li>
-									<li><i class="icofont-rounded-right"></i><strong>Status:</strong> Final-year Students</li>
+									<li>
+										<i class="icofont-rounded-right"></i
+										><strong>Birthday:</strong> 7 August 2000
+									</li>
+									<li>
+										<i class="icofont-rounded-right"></i
+										><strong>Phone:</strong> +62 812 7107 7073
+									</li>
+									<li>
+										<i class="icofont-rounded-right"></i
+										><strong>City:</strong> Lima Puluh Kota, Sumbar. ID
+									</li>
+									<li>
+										<i class="icofont-rounded-right"></i
+										><strong>Degree : </strong> Bachelor of Applied Science
+									</li>
+									<li>
+										<i class="icofont-rounded-right"></i
+										><strong>Email:</strong> bayu.gustip7820@gmail.com
+									</li>
+									<li>
+										<i class="icofont-rounded-right"></i
+										><strong>Status:</strong> Final-year Students
+									</li>
 								</ul>
 							</div>
 						</div>
@@ -90,43 +131,82 @@
 
 				<div class="row">
 					<div class="col-lg-3 col-md-4">
-						<div class="icon-box"><i class="fas fa-cube" style="color: #ffbb2c"></i><h3>OOP</h3></div>
+						<div class="icon-box">
+							<i class="fas fa-cube" style="color: #ffbb2c"></i>
+							<h3>OOP</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-						<div class="icon-box"><i class="fab fa-git-alt" style="color: #5578ff"></i><h3>Git</h3></div>
+						<div class="icon-box">
+							<i class="fab fa-git-alt" style="color: #5578ff"></i>
+							<h3>Git</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4 mt-md-0">
-						<div class="icon-box"><i class="fas fa-copyright" style="color: #e80368"></i><h3>C Programming</h3></div>
+						<div class="icon-box">
+							<i class="fas fa-copyright" style="color: #e80368"></i>
+							<h3>C Programming</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
-						<div class="icon-box"><i class="fas fa-window-maximize" style="color: #e361ff"></i><h3>VB.Net Programming</h3></div>
+						<div class="icon-box">
+							<i class="fas fa-window-maximize" style="color: #e361ff"></i>
+							<h3>VB.Net Programming</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4">
-						<div class="icon-box"><i class="fab fa-java" style="color: #47aeff"></i><h3>Java Programming</h3></div>
+						<div class="icon-box">
+							<i class="fab fa-java" style="color: #47aeff"></i>
+							<h3>Java Programming</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4">
-						<div class="icon-box"><i class="fab fa-php" style="color: #ffa76e"></i><h3>PHP Programming</h3></div>
+						<div class="icon-box">
+							<i class="fab fa-php" style="color: #ffa76e"></i>
+							<h3>PHP Programming</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4">
-						<div class="icon-box"><i class="fab fa-laravel" style="color: #11dbcf"></i><h3>Laravel Framework</h3></div>
+						<div class="icon-box">
+							<i class="fab fa-laravel" style="color: #11dbcf"></i>
+							<h3>Laravel Framework</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4">
-						<div class="icon-box"><i class="fab fa-android" style="color: #4233ff"></i><h3>Java Android</h3></div>
+						<div class="icon-box">
+							<i class="fab fa-android" style="color: #4233ff"></i>
+							<h3>Java Android</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4">
-						<div class="icon-box"><i class="fas fa-brain" style="color: #b2904f"></i><h3>Algorithm</h3></div>
+						<div class="icon-box">
+							<i class="fas fa-brain" style="color: #b2904f"></i>
+							<h3>Algorithm</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4">
-						<div class="icon-box"><i class="fas fa-database" style="color: #b20969"></i><h3>MySQL</h3></div>
+						<div class="icon-box">
+							<i class="fas fa-database" style="color: #b20969"></i>
+							<h3>MySQL</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4">
-						<div class="icon-box"><i class="fas fa-code-branch" style="color: #ff5828"></i><h3>Rest API</h3></div>
+						<div class="icon-box">
+							<i class="fas fa-code-branch" style="color: #ff5828"></i>
+							<h3>Rest API</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4">
-						<div class="icon-box"><i class="fas fa-server" style="color: #29cc61"></i><h3>Server Management</h3></div>
+						<div class="icon-box">
+							<i class="fas fa-server" style="color: #29cc61"></i>
+							<h3>Server Management</h3>
+						</div>
 					</div>
 					<div class="col-lg-3 col-md-4 mt-4">
-						<div class="icon-box"><i class="fab fa-google" style="color: #b2904f"></i><h3>Go-Language</h3></div>
+						<div class="icon-box">
+							<i class="fab fa-google" style="color: #b2904f"></i>
+							<h3>Go-Language</h3>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -140,14 +220,23 @@
 				<div class="section-title">
 					<h2>Resume</h2>
 					<p>Check My Resume</p>
-					<a href="https://drive.google.com/file/d/1lKfuGOi9RTPvBvDfnf1UqtqyEJxF8v3p/view?usp=sharing" target="_blank" class="btn" >Download My Resume As PDF</a>
+					<a
+						href="https://drive.google.com/file/d/1lKfuGOi9RTPvBvDfnf1UqtqyEJxF8v3p/view?usp=sharing"
+						target="_blank"
+						class="btn"
+						>Download My Resume As PDF</a
+					>
 				</div>
 
 				<div class="row">
 					<div class="col-lg-6">
 						<h3 class="resume-title">Education</h3>
 						<div class="resume-item">
-							<h4><a href="https://pnp.ac.id" target="_blank">Padang State Polytechnic</a></h4>
+							<h4>
+								<a href="https://pnp.ac.id" target="_blank"
+									>Padang State Polytechnic</a
+								>
+							</h4>
 							<h5><em>D4-TRPL (Software Engineering)</em></h5>
 							<h5>2018 - Present</h5>
 							<p>Learning about :</p>
@@ -184,12 +273,21 @@
 						<div class="resume-item">
 							<h4>Junior Web Developer</h4>
 							<h5>Apr 2019 - Present</h5>
-							<p><em>Junior Web Developer at Future Generation of Technology,Padang. West Sumatera.</em></p>
+							<p>
+								<em
+									>Junior Web Developer at Future Generation of
+									Technology,Padang. West Sumatera.</em
+								>
+							</p>
 						</div>
 						<div class="resume-item">
 							<h4>Head of Web Developer Division</h4>
 							<h5>Jun 2020 - Dec 2020</h5>
-							<p><em>Head of Web Developer Division at Anak IT Sumbar Comunity</em></p>
+							<p>
+								<em
+									>Head of Web Developer Division at Anak IT Sumbar Comunity</em
+								>
+							</p>
 						</div>
 					</div>
 
@@ -198,10 +296,18 @@
 						<h3 class="resume-title">Experience</h3>
 						<div class="resume-item">
 							<h4>Web Apps Developer (Intern)</h4>
-							<h5><em>GIBS Yayasan Hasnur Center - Barito Kuala, KalimantanSelatan</em></h5>
+							<h5>
+								<em
+									>GIBS Yayasan Hasnur Center - Barito Kuala,
+									KalimantanSelatan</em
+								>
+							</h5>
 							<h5>August 2021 - December 2021</h5>
 							<ul>
-								<li>Created an LMS (Learning Management System) for this schoolusing the Laravel framework.</li>
+								<li>
+									Created an LMS (Learning Management System) for this
+									schoolusing the Laravel framework.
+								</li>
 								<li>Deploy the system / host the system.</li>
 								<li>Work directly with the team as well as using git.</li>
 							</ul>
@@ -209,22 +315,39 @@
 
 						<div class="resume-item">
 							<h4>Frontend Developer (Freelance - Remote)</h4>
-							<h5><em>PT. Tiga Pilar Pratama Energi - Cilandak, Jakarta Selatan</em></h5>
+							<h5>
+								<em
+									>PT. Tiga Pilar Pratama Energi - Cilandak, Jakarta Selatan</em
+								>
+							</h5>
 							<h5>August 2020</h5>
 							<ul>
 								<li>Design and manage web profiles for this company.</li>
 								<li>Build a web with bootstrap templates.</li>
-								<li>Website hosting (<a	href="https://www.3pilarpratamaenergi.com/" target="_blank">www.3pilarpratamaenergi.com</a>)\</li>
+								<li>
+									Website hosting (<a
+										href="https://www.3pilarpratamaenergi.com/"
+										target="_blank"
+										>www.3pilarpratamaenergi.com</a
+									>)\
+								</li>
 							</ul>
 						</div>
 
 						<div class="resume-item">
 							<h4>Web Developer (Freelance)</h4>
-							<h5><em>Ma'had Alquran Darul Huda - SD Islam Alkuttab - Lima Puluh Kota, West Sumatera</em></h5>
+							<h5>
+								<em
+									>Ma'had Alquran Darul Huda - SD Islam Alkuttab - Lima Puluh
+									Kota, West Sumatera</em
+								>
+							</h5>
 							<h5>July 2017</h5>
 							<ul>
 								<li>Design and manage web profiles for this Islamic school.</li>
-								<li>Retrieve and editing school documentation for the website.</li>
+								<li>
+									Retrieve and editing school documentation for the website.
+								</li>
 								<li>Built with Wordpress CMS.</li>
 							</ul>
 						</div>
@@ -234,7 +357,9 @@
 							<h5><em>LPTIK Universitas Andalas, Padang, West Sumatera</em></h5>
 							<h5>Feb 2017 - Apr 2017</h5>
 							<ul>
-								<li>Learn and manage PHP Frameworks such as Yii2 and Laravel.</li>
+								<li>
+									Learn and manage PHP Frameworks such as Yii2 and Laravel.
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -265,13 +390,30 @@
 				<div class="row portfolio-container">
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""/>
+							<img
+								src="assets/img/portfolio/portfolio-1.jpg"
+								class="img-fluid"
+								alt=""
+							/>
 							<div class="portfolio-info">
 								<h4>MaMoney</h4>
 								<p>Website</p>
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="MaMoney" ><i class="fa fa-search-plus"></i></a>
-									<a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" ><i class="fa fa-link"></i></a>
+									<a
+										href="assets/img/portfolio/portfolio-1.jpg"
+										data-gall="portfolioGallery"
+										class="venobox"
+										title="MaMoney"
+										><i class="fa fa-search-plus"></i
+									></a>
+									<a
+										href="portfolio-details.html"
+										data-gall="portfolioDetailsGallery"
+										data-vbtype="iframe"
+										class="venobox"
+										title="Portfolio Details"
+										><i class="fa fa-link"></i
+									></a>
 								</div>
 							</div>
 						</div>
@@ -279,13 +421,30 @@
 
 					<div class="col-lg-4 col-md-6 portfolio-item filter-web">
 						<div class="portfolio-wrap">
-							<img src="assets/img/portfolio/port-tigapil.jpg" class="img-fluid" alt=""/>
+							<img
+								src="assets/img/portfolio/port-tigapil.jpg"
+								class="img-fluid"
+								alt=""
+							/>
 							<div class="portfolio-info">
 								<h4>Tiga Pilar WAE</h4>
 								<p>Website</p>
 								<div class="portfolio-links">
-									<a href="assets/img/portfolio/port-tigapil.jpg" data-gall="portfolioGallery" class="venobox" title="MaMoney" ><i class="fa fa-search-plus"></i></a>
-									<a href="port3pil.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details" ><i class="fa fa-link"></i></a>
+									<a
+										href="assets/img/portfolio/port-tigapil.jpg"
+										data-gall="portfolioGallery"
+										class="venobox"
+										title="MaMoney"
+										><i class="fa fa-search-plus"></i
+									></a>
+									<a
+										href="port3pil.html"
+										data-gall="portfolioDetailsGallery"
+										data-vbtype="iframe"
+										class="venobox"
+										title="Portfolio Details"
+										><i class="fa fa-link"></i
+									></a>
 								</div>
 							</div>
 						</div>
@@ -308,7 +467,10 @@
 						<div class="info-box">
 							<i class="bx bx-map"></i>
 							<h3>My Address</h3>
-							<p> Tan Malaka Km.12, Kec.Guguak, Kab. Lima Puluh Kota, Sumbar, ID 26253</p>
+							<p>
+								Tan Malaka Km.12, Kec.Guguak, Kab. Lima Puluh Kota, Sumbar, ID
+								26253
+							</p>
 						</div>
 					</div>
 
@@ -317,11 +479,23 @@
 							<i class="bx bx-share-alt"></i>
 							<h3>Social Profiles</h3>
 							<div class="social-links">
-								<a href="https://wa.me/6281271077073" target="_blank"><i class="fab fa-whatsapp"></i></a>
-								<a href="https://www.instagram.com/bye_guss/" target="_blank"><i class="fab fa-instagram"></i></a>
-								<a href="https://github.com/bayugustiparaya" target="_blank"><i class="fab fa-github"></i></a>
-								<a href="https://bayugustiparaya.blogspot.com/" target="_blank"><i class="fab fa-blogger-b"></i></a>
-								<a href="https://www.linkedin.com/in/bayugustiparaya/" target="_blank"><i class="fab fa-linkedin"></i></a>
+								<a href="https://wa.me/6281271077073" target="_blank"
+									><i class="fab fa-whatsapp"></i
+								></a>
+								<a href="https://www.instagram.com/bye_guss/" target="_blank"
+									><i class="fab fa-instagram"></i
+								></a>
+								<a href="https://github.com/bayugustiparaya" target="_blank"
+									><i class="fab fa-github"></i
+								></a>
+								<a href="https://bayugustiparaya.blogspot.com/" target="_blank"
+									><i class="fab fa-blogger-b"></i
+								></a>
+								<a
+									href="https://www.linkedin.com/in/bayugustiparaya/"
+									target="_blank"
+									><i class="fab fa-linkedin"></i
+								></a>
 							</div>
 						</div>
 					</div>
@@ -330,7 +504,11 @@
 						<div class="info-box">
 							<i class="bx bx-envelope"></i>
 							<h3>Email Me</h3>
-							<p><a href="mailto:bayu.gustip7820@gmail.com" target="_blank">bayu.gustip7820@gmail.com</a></p>
+							<p>
+								<a href="mailto:bayu.gustip7820@gmail.com" target="_blank"
+									>bayu.gustip7820@gmail.com</a
+								>
+							</p>
 						</div>
 					</div>
 
@@ -346,11 +524,14 @@
 		</section>
 		<!-- End Contact Section -->
 
-		<div class="credits"> &copy <a href="https://bayugustiparaya.github.io">Bayu Gusti Paraya</a> | 2021</div>
+		<div class="credits">
+			&copy <a href="https://bayugustiparaya.github.io">Bayu Gusti Paraya</a> |
+			2021
+		</div>
 
 		<script src="assets/ven/jquery/jquery.min.js"></script>
 		<script src="assets/ven/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/ven/jquery.easing/jquery.easing.min.js"></script>
+		<script src="assets/ven/jquery.easing/jquery.easing.min.js"></script>
 		<script src="assets/ven/waypoints/jquery.waypoints.min.js"></script>
 		<script src="assets/ven/counterup/counterup.min.js"></script>
 		<script src="assets/ven/owl.carousel/owl.carousel.min.js"></script>
